Add and get data from the api

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
       <section id="add">
         <div><h3>Add your score</h3></div>
         <ul class="inputField">
-          <li><input type="text" placeholder="Your name" /></li>
-          <li><input type="text" placeholder="Your score" /></li>
+          <li><input class="name" type="text" placeholder="Your name" /></li>
+          <li><input class="scores" type="text" placeholder="Your score" /></li>
           <li><input class="btn" type="submit" /></li>
         </ul>
       </section>
